Fixed P5 deployment docs